fix: components styles feat: add `Text` component

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,6 +1,6 @@
 @import "themes.scss";
 @import "colors.scss";
-@import url('https://fonts.cdnfonts.com/css/sf-ui-display');
+@import url('https://v1.fontapi.ir/css/SFUIDisplay');
 
 * {
   font-family: "SF UI Display", sans-serif;
