--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -4,13 +4,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1000;
   visibility: hidden;
+  width: fit-content;
+
+  &[data-absolute="true"] {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+  }
 
   &[data-show="true"] {
     visibility: visible;
