feat: update units px > rem feat: make size in `Text` optional

--- a/src/components/CircularProgress/style.scss
+++ b/src/components/CircularProgress/style.scss
@@ -1,8 +1,8 @@
 @import "@assets/styles/app.scss";
 
 .ev-circular-progress {
-  width: 100px;
-  height: 100px;
+  width: 6.25rem;
+  height: 6.25rem;
 
   &-track {
     stroke-width: 3;
