--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -14,7 +14,7 @@
 
     input::-webkit-slider-thumb {
       outline: 1px solid $ev--b-100;
-      margin-top: -4px;
+      margin-top: -0.25rem;
     }
   }
 
