--- a/src/components/ButtonsGroup/style.scss
+++ b/src/components/ButtonsGroup/style.scss
@@ -18,10 +18,10 @@
   button:last-child {
     border-top-right-radius: 0.625rem;
     border-bottom-right-radius: 0.625rem;
-    margin-left: -1px;
+    margin-left: -0.0625rem;
   }
 
   button:not(:first-child):not(:last-child) {
-    margin-left: -1px;
+    margin-left: -0.0625rem;
   }
 }
