--- a/src/components/Switch/style.scss
+++ b/src/components/Switch/style.scss
@@ -1,9 +1,9 @@
 @import "@assets/styles/app.scss";
 
 .ev-switch {
-  width: 48px;
-  height: 24px;
-  border-radius: 23px;
+  width: 3rem;
+  height: 1.5rem;
+  border-radius: 1.438rem;
   background: $ev--b-500;
   transition: .2s ease-out;
   cursor: pointer;
@@ -26,8 +26,8 @@
   }
 
   &-radio {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
     border-radius: 100%;
     background: $ev--b-300;
     transition: .2s ease-out;
