--- a/src/components/CircularProgress/style.scss
+++ b/src/components/CircularProgress/style.scss
@@ -1,6 +1,7 @@
 @import "@assets/styles/app.scss";
 
 .ev-circular-progress {
+  position: relative;
 
   &-track {
     stroke: rgba(255, 255, 255, .2);
