feat: add local fonts in assets

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,6 +1,6 @@
 @import "themes.scss";
 @import "colors.scss";
-@import url('https://v1.fontapi.ir/css/SFUIDisplay');
+@import 'fonts.scss';
 
 * {
   font-family: "SF UI Display", sans-serif;
