--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -5,7 +5,7 @@
 * {
   font-family: "SF UI Display", sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 500;
   padding: 0;
   margin: 0;
   -webkit-touch-callout: none;
