--- a/src/components/Hint/style.scss
+++ b/src/components/Hint/style.scss
@@ -6,6 +6,10 @@
   gap: 0.62rem;
   color: $ev--b-000;
 
+  &-text {
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.30);
+  }
+
   &-box {
     display: flex;
     gap: 0.31rem;
