feat: export ALL prop types for components feat: rename Modal "absolute" prop

--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -7,7 +7,7 @@
   visibility: hidden;
   width: fit-content;
 
-  &[data-absolute="true"] {
+  &[data-centered="true"] {
     width: 100%;
     height: 100%;
     position: absolute;
