--- a/src/legacycomponents/TipLegacy/TipLegacy.scss
+++ b/src/legacycomponents/TipLegacy/TipLegacy.scss
@@ -8,7 +8,7 @@
   font-weight: 500;
 
   div {
-    padding: .5rem;
+    padding: 0.5rem;
     border-radius: 0.3125rem;
     font-size: 0.875rem;
 
