--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,39 +1,39 @@
-$ev-color--white: #FFFFFF;
+$ev-color--white: #ffffff;
 $ev-color--black: #000000;
 $ev-color--alpha: rgba(0, 0, 0, 0);
 
-$ev-color--default: #17191C;
+$ev-color--default: #17191c;
 $ev-color--default-hover: #242629;
 $ev-color--default-disabled: #515356;
 
-$ev-color--primary: #027EF6;
-$ev-color--primary-hover: #3198F7;
-$ev-color--primary-focus: #027EF6;
-$ev-color--primary-disabled: #013F8F;
+$ev-color--primary: #027ef6;
+$ev-color--primary-hover: #3198f7;
+$ev-color--primary-focus: #027ef6;
+$ev-color--primary-disabled: #013f8f;
 
 // Palette
-$ev--b-000: #FFF;
-$ev--b-100: #D7D7D7;
+$ev--b-000: #fff;
+$ev--b-100: #d7d7d7;
 $ev--b-200: #515356;
 $ev--b-300: #242629;
-$ev--b-400: #1B1D20;
-$ev--b-500: #17191C;
+$ev--b-400: #1b1d20;
+$ev--b-500: #17191c;
 $ev--b-600: #141619;
 $ev--b-700: #121417;
 $ev--b-800: #101215;
-$ev--b-900: #0E1013;
+$ev--b-900: #0e1013;
 
-$ev--p-000: #F2FAFF;
-$ev--p-100: #C2E3FC;
-$ev--p-200: #91CBFA;
-$ev--p-300: #61B3FA;
-$ev--p-400: #3198F7;
-$ev--p-500: #027EF6;
-$ev--p-600: #0273EB;
-$ev--p-700: #0265D6;
-$ev--p-800: #0254B8;
-$ev--p-900: #013F8F;
+$ev--p-000: #f2faff;
+$ev--p-100: #c2e3fc;
+$ev--p-200: #91cbfa;
+$ev--p-300: #61b3fa;
+$ev--p-400: #3198f7;
+$ev--p-500: #027ef6;
+$ev--p-600: #0273eb;
+$ev--p-700: #0265d6;
+$ev--p-800: #0254b8;
+$ev--p-900: #013f8f;
 
-$ev--a-100: #F44336;
-$ev--a-200: #2575FC;
+$ev--a-100: #f44336;
+$ev--a-200: #2575fc;
 $ev--a-300: #429321;
