--- a/src/components/Captcha/style.scss
+++ b/src/components/Captcha/style.scss
@@ -18,7 +18,7 @@
 
   &-value[data-active="true"][data-success="true"] {
     background: #121816;
-    color: $ev--a-300
+    color: $ev--a-300;
   }
 
   &-value[data-active="true"][data-success="false"] {
