--- a/src/components/CircularProgress/style.scss
+++ b/src/components/CircularProgress/style.scss
@@ -4,17 +4,17 @@
   position: relative;
 
   &-track {
-    stroke: rgba(255, 255, 255, .2);
+    stroke: rgba(255, 255, 255, 0.2);
     fill: none;
   }
 
   .progress {
-    stroke: #FFF;
+    stroke: #fff;
     stroke-linecap: round;
     fill: none;
     transform: rotate(270deg);
     transform-origin: center;
-    transition: .3s ease-out;
+    transition: 0.3s ease-out;
   }
 
   &-label {
