--- a/src/components/ColorSelector/style.scss
+++ b/src/components/ColorSelector/style.scss
@@ -10,15 +10,15 @@
     height: 1.125rem;
     border-radius: 0.25rem;
 
-    &[data-selected='true'] {
-      border: 1px solid #FFF;
+    &[data-selected="true"] {
+      border: 1px solid #fff;
     }
   }
 
   &-colors {
-    color: #FFF;
+    color: #fff;
     display: flex;
-    gap: .31rem;
+    gap: 0.31rem;
 
     .ev-components--color-switcher_value {
       width: 1.125rem;
@@ -27,7 +27,7 @@
     }
 
     .ev-components--color-switcher_value--active {
-      border: 1px solid #FFF;
+      border: 1px solid #fff;
     }
   }
 
