--- a/src/components/HorizontalProgress/style.scss
+++ b/src/components/HorizontalProgress/style.scss
@@ -7,7 +7,7 @@
     background: $ev--b-300;
     border-radius: 1.875rem;
     overflow: hidden;
-    transition: background-color .3s;
+    transition: background-color 0.3s;
   }
 
   &[data-disabled="true"] {
@@ -32,6 +32,6 @@
     background: $ev--p-500;
     height: 100%;
     border-radius: 1.875rem;
-    transition: .3s ease-out;
+    transition: 0.3s ease-out;
   }
 }
