--- a/src/components/Icon/style.scss
+++ b/src/components/Icon/style.scss
@@ -3,6 +3,9 @@
   align-items: center;
 
   svg {
-    transition: fill .3s, stroke .3s, color .3s;
+    transition:
+      fill 0.3s,
+      stroke 0.3s,
+      color 0.3s;
   }
 }
