--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -8,8 +8,13 @@
 
   &[data-style="light"] {
     input::-webkit-slider-runnable-track {
-      background: linear-gradient(to right, $ev--p-500 0%, $ev--p-500 var(--track-width), $ev--b-000 0%);
-      border: 1px solid var(--B-100, #D7D7D7);
+      background: linear-gradient(
+        to right,
+        $ev--p-500 0%,
+        $ev--p-500 var(--track-width),
+        $ev--b-000 0%
+      );
+      border: 1px solid var(--B-100, #d7d7d7);
     }
 
     input::-webkit-slider-thumb {
@@ -19,7 +24,12 @@
   }
 
   &[data-style="dark"] input::-webkit-slider-runnable-track {
-    background: linear-gradient(to right, $ev--p-500 0%, $ev--p-500 var(--track-width), $ev--b-300 0%);
+    background: linear-gradient(
+      to right,
+      $ev--p-500 0%,
+      $ev--p-500 var(--track-width),
+      $ev--b-300 0%
+    );
   }
 
   input {
@@ -48,7 +58,12 @@
     color: $ev--b-200;
 
     input::-webkit-slider-runnable-track {
-      background: linear-gradient(to right, $ev--b-200 0%, $ev--b-200 var(--track-width), $ev--b-400 0%);
+      background: linear-gradient(
+        to right,
+        $ev--b-200 0%,
+        $ev--b-200 var(--track-width),
+        $ev--b-400 0%
+      );
     }
 
     input::-webkit-slider-thumb {
@@ -57,5 +72,4 @@
       margin-top: -0.188rem;
     }
   }
-
 }
