--- a/src/components/TextInfo/style.scss
+++ b/src/components/TextInfo/style.scss
@@ -6,7 +6,7 @@
   border-radius: 0.625rem;
   padding: 0.625rem 0.9375rem;
   gap: 0.31rem;
-  transition: .3s;
+  transition: 0.3s;
   color: $ev--b-100;
   background: $ev--b-400;
   border: 1px solid $ev--b-300;
