--- a/src/legacycomponents/ButtonLegacy/Button.scss
+++ b/src/legacycomponents/ButtonLegacy/Button.scss
@@ -5,7 +5,7 @@
   outline: none;
   border: none;
   color: $ev-color--white;
-  transition: .3s;
+  transition: 0.3s;
   max-width: 100%;
   cursor: pointer;
   border-radius: 8px;
@@ -37,7 +37,7 @@
 
       svg {
         path {
-          transition: .3s;
+          transition: 0.3s;
           fill: black;
         }
       }
