--- a/src/legacycomponents/DropdownLegacy/DropdownLegacy.scss
+++ b/src/legacycomponents/DropdownLegacy/DropdownLegacy.scss
@@ -6,7 +6,7 @@
   align-items: center;
   flex-direction: column;
   width: 12.5rem;
-  gap: .63rem;
+  gap: 0.63rem;
 
   &-box {
     cursor: pointer;
@@ -27,10 +27,10 @@
     font-weight: 500;
 
     svg {
-      transition: .3s;
+      transition: 0.3s;
 
       path {
-        transition: .3s;
+        transition: 0.3s;
       }
     }
 
@@ -66,7 +66,7 @@
     overflow: hidden;
     opacity: 0;
     pointer-events: none;
-    transition: .3s;
+    transition: 0.3s;
 
     &--box {
       cursor: pointer;
@@ -76,7 +76,7 @@
       padding: 0.625rem;
       align-items: center;
       gap: 0.625rem;
-      transition: .3s;
+      transition: 0.3s;
       color: $ev--b-100;
       font-size: 0.875rem;
       box-sizing: border-box;
