--- a/src/legacycomponents/RadioLegacy/RadioLegacy.scss
+++ b/src/legacycomponents/RadioLegacy/RadioLegacy.scss
@@ -6,7 +6,7 @@
     height: 1.5rem;
     cursor: pointer;
     box-sizing: border-box;
-    transition: .3s;
+    transition: 0.3s;
     background: $ev--b-500;
     border-radius: 5rem;
 
@@ -15,7 +15,7 @@
       width: 1.5rem;
       height: 1.5rem;
       border-radius: 5rem;
-      transition: .3s;
+      transition: 0.3s;
     }
 
     &:hover {
@@ -35,7 +35,7 @@
         width: 1.5rem;
         height: 1.5rem;
         border-radius: 5rem;
-        transition: .3s;
+        transition: 0.3s;
       }
 
       &:hover {
