--- a/src/components/CircularProgress/style.scss
+++ b/src/components/CircularProgress/style.scss
@@ -1,4 +1,4 @@
-@import "@assets/styles/app.scss";
+@import '@assets/styles/app.scss';
 
 .ev-circular-progress {
   position: relative;
@@ -9,7 +9,6 @@
   }
 
   .progress {
-    stroke: #fff;
     stroke-linecap: round;
     fill: none;
     transform: rotate(270deg);
@@ -24,3 +23,4 @@
     transform: translate(-50%, -50%);
   }
 }
+
