fix: stroke-linecap

--- a/src/components/CircularProgress/style.scss
+++ b/src/components/CircularProgress/style.scss
@@ -4,6 +4,7 @@
   position: relative;
 
   &-track {
+    stroke-linecap: round;
     stroke: rgba(255, 255, 255, 0.2);
     fill: none;
     transform: rotate(270deg);
