--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -2,6 +2,7 @@
 
 .ev-button {
   display: flex;
+  height: fit-content;
   align-items: center;
   gap: 0.5rem;
   font-size: 0.875rem;
@@ -18,18 +19,15 @@
 %size {
   &[data-size='xs'] {
     min-height: 2.5rem;
-    max-height: 2.5rem;
   }
 
   &[data-size='sm'] {
     min-height: 3.125rem;
-    max-height: 3.125rem;
     border-radius: 0.5rem;
   }
 
   &[data-size='md'] {
     min-height: 3.75rem;
-    max-height: 3.75rem;
     font-size: 1rem;
   }
 }
