--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -1,62 +1,62 @@
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/100.woff2") format("woff2");
+  src: url("/fonts/100.woff2") format("woff2");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/200.woff2") format("woff2");
+  src: url("/fonts/200.woff2") format("woff2");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/300.woff2") format("woff2");
+  src: url("/fonts/300.woff2") format("woff2");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/400.woff2") format("woff2");
+  src: url("/fonts/400.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/500.woff2") format("woff2");
+  src: url("/fonts/500.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/600.woff2") format("woff2");
+  src: url("/fonts/600.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/700.woff2") format("woff2");
+  src: url("/fonts/700.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/800.woff2") format("woff2");
+  src: url("/fonts/800.woff2") format("woff2");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SF UI Display";
-  src: url("@assets/fonts/900.woff2") format("woff2");
+  src: url("/fonts/900.woff2") format("woff2");
   font-weight: 900;
   font-style: normal;
 }
