feat: update components

--- a/src/components/Hint/style.scss
+++ b/src/components/Hint/style.scss
@@ -15,7 +15,7 @@
     gap: 0.31rem;
     background: $ev--b-000;
     color: $ev--b-500;
-    padding: 0.625rem 0.9375rem;
+    padding: 0.625rem;
     border-radius: 0.625rem;
     align-items: center;
   }
