--- a/src/components/ButtonsGroup/style.scss
+++ b/src/components/ButtonsGroup/style.scss
@@ -6,22 +6,20 @@
   width: 100%;
 
   button {
-    border-radius: 0;
+    border-radius: 0 !important;
     width: 100%;
   }
 
   button:first-child {
-    border-top-left-radius: 0.625rem;
-    border-bottom-left-radius: 0.625rem;
+    border-radius: 0.625rem 0 0 0.625rem !important;
   }
 
   button:last-child {
-    border-top-right-radius: 0.625rem;
-    border-bottom-right-radius: 0.625rem;
+    border-radius: 0 0.625rem 0.625rem 0 !important;
     margin-left: -0.0625rem;
   }
 
-  button:not(:first-child):not(:last-child) {
+  button:not(:first-child) {
     margin-left: -0.0625rem;
   }
 
