--- a/src/components/HorizontalProgress/style.scss
+++ b/src/components/HorizontalProgress/style.scss
@@ -2,6 +2,7 @@
 
 .ev-horizontal-progress {
   display: flex;
+  min-width: 12.5rem;
   height: fit-content;
   background: $ev--b-300;
   color: $ev--p-500;
